--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,45 +1,72 @@
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;600&display=swap');
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Quicksand';
 }
 
 header{
     width: 100%;
+    background-color: #8c0022;
 }
 
 header img{
-    width: 4vw;
-    height: 10vh;
-    margin-left: 20px;
-    margin-top: 15px;
+    width: 10vw;
+    margin: 1%;
 }
 
-main{
+.first{
+    width: 100vw;
+    height: 50vh;
+    background-color: #8c0022;
     display: flex;
 }
 
-.line{
-    height: 78vh;
-    background-color: black;
-    width: 2px;
-    margin-left: 58px;
-    margin-top: 15px;
+.first img{
+    width: 80%;
+    position: relative;
+    bottom: -128px;
+    margin-left: 13vw;
 }
 
-figure img.car{
-    width: 50vw;
-    margin-top: 200px;
-    margin-left: 50px;
+.first p{
+    color: white;
+    text-align: center;
+    margin-right: 20%;
+    font-size: 28px;
 }
 
-footer img{
-    width: 40px;
-    margin-left: 20px;
+aside{
+    display: flex;
+   align-items: center;
+   flex-direction: column;
+   margin-top: 4%;
 }
 
-footer{
-    margin-top: 18px;
-    margin-left: 20px;
+.first aside button{
+    background-color: #6e0c1b;
+    border: none;
+    text-align: center;
+    margin-top: 3%;
+    margin-right: 20%;
+    width: 40%;
+    height: 6vh;
+    color: white;
+    font-size: 20px;
+    border-radius: 3px;
+    cursor: pointer;
+}
+
+.second{
+    width: 100%;
+    height: 40vh;
+    display: flex;
+    align-items: center;
+}
+
+.second img{
+    width: 25%;
+    margin-left: 5%;
 }
 
