--- a/styles/styles.css
+++ b/styles/styles.css
@@ -58,6 +58,10 @@ aside{
     cursor: pointer;
 }
 
+.first aside button:hover{
+    background-color: #750617;
+}
+
 .second{
     width: 100%;
     height: 40vh;
@@ -65,8 +69,143 @@ aside{
     align-items: center;
 }
 
-.second img{
-    width: 25%;
-    margin-left: 5%;
+.second .sferrari{
+    width: 150%;
+    margin-left: 3%;
 }
+
+.second img{
+    width: 50%;
+    margin-left: 50%;
+}
+
+@media(min-width: 1921px)-(max-width: 2560px){
+    .first img{
+        width: 80%;
+        position: relative;
+        bottom: -388px;
+        margin-left: 13vw;
+    }
+}
+
+@media(max-width: 1440px){
+    .first img{
+        width: 80%;
+        position: relative;
+        bottom: -218px;
+        margin-left: 13vw;
+    }
+}
+
+@media(max-width: 1024px){
+    .first img{
+        width: 80%;
+        position: relative;
+        bottom: -244px;
+        margin-left: 13vw;
+    }
+
+    aside{
+        display: flex;
+       align-items: center;
+       flex-direction: column;
+       margin-top: 1%;
+    }
+}
+
+@media(max-width: 768px){
+    .first img{
+        width: 80%;
+        position: relative;
+        bottom: -268px;
+        margin-left: 13vw;
+    }
+
+    aside{
+        display: flex;
+       align-items: center;
+       flex-direction: column;
+       margin-top: 1%;
+    }
+
+    .first p{
+        color: white;
+        text-align: center;
+        margin-right: 20%;
+        font-size: 18px;
+    }
+
+    .first aside button{
+        background-color: #6e0c1b;
+        border: none;
+        text-align: center;
+        margin-top: 3%;
+        margin-right: 20%;
+        width: 40%;
+        height: 6vh;
+        color: white;
+        font-size: 15px;
+        border-radius: 3px;
+        cursor: pointer;
+    }
+}
+
+@media(max-width: 425px){
+    *{
+        overflow: hidden;
+    }
+    .first img{
+        width: 80%;
+        position: relative;
+        bottom: -120px;
+        margin-left: 10vw;
+    }
+
+    aside{
+        display: flex;
+       align-items: center;
+       flex-direction: column;
+       margin-top: 1%;
+    }
+
+    .first p{
+        color: white;
+        text-align: center;
+        margin-right: 20px;
+        font-size: 15px;
+    }
+
+    .first aside button{
+        background-color: #6e0c1b;
+        border: none;
+        text-align: center;
+        margin-top: 3%;
+        margin-right: 20px;
+        width: 60%;
+        height: 6vh;
+        color: white;
+        font-size: 12px;
+        border-radius: 3px;
+        cursor: pointer;
+    }
+
+    .second{
+        width: 100%;
+        height: 40vh;
+        display: flex;
+        justify-content: flex-start;
+        align-items: flex-start;
+    }
+
+    .second .sferrari{
+       display: none;
+    }
+
+    .second .my-slider{
+        margin-top: 50%;
+        margin-left: -40px;
+    }
+}
+
+
 
