--- a/styles/styles.css
+++ b/styles/styles.css
@@ -8,204 +8,433 @@
 
 header{
     width: 100%;
+    height: 9vh;
     background-color: #8c0022;
 }
 
 header img{
-    width: 10vw;
-    margin: 1%;
+    width: 10%;
 }
 
-.first{
-    width: 100vw;
-    height: 50vh;
+.primeira-parte{
+    width: 100%;
+    height: 60vh;
     background-color: #8c0022;
-    display: flex;
 }
 
-.first img{
-    width: 80%;
+.primeira-parte img{
+    width: 50%;
     position: relative;
-    bottom: -128px;
-    margin-left: 13vw;
+    bottom: -192px;
+    margin-left: 15%;
 }
 
-.first p{
-    color: white;
+.primeira-parte p{
     text-align: center;
-    margin-right: 20%;
-    font-size: 28px;
-}
-
-aside{
     display: flex;
-   align-items: center;
-   flex-direction: column;
-   margin-top: 4%;
+    justify-content: end;
+    color: white;
+    position: relative;
+    bottom: 500px;
+    margin-right: 20%;
+    font-size: 22px;
 }
 
-.first aside button{
-    background-color: #6e0c1b;
-    border: none;
-    text-align: center;
-    margin-top: 3%;
-    margin-right: 20%;
-    width: 40%;
-    height: 6vh;
+.primeira-parte button{
+    width: 200px;
+    height: 50px;
     color: white;
-    font-size: 20px;
-    border-radius: 3px;
+    background-color: #6e0c1b;
+    position: absolute;
+    bottom: 650px;
+    left: 59%;
+    border: none;
     cursor: pointer;
 }
 
-.first aside button:hover{
-    background-color: #750617;
+
+.primeira-parte button:hover{
+    background-color: #f00629;
+    transition: 2s;
+    transform: scale(1.02);
 }
 
-.second{
-    width: 100%;
-    height: 40vh;
+.final{
+    height: 31vh;
     display: flex;
     align-items: center;
+    justify-content: center;
 }
 
-.second .sferrari{
-    width: 150%;
-    margin-left: 3%;
+.itens{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 1%;
 }
 
-.second img{
-    width: 50%;
-    margin-left: 50%;
+.item{
+    transition: .35s;
+    cursor: pointer;
+    width: 15vw;
+    height: 20vh;
 }
+
+.itens:hover > :not(:hover){
+    opacity: .4;
+    transform: scale(0.9);
+}
+
+
+
+
+
+/*Responsividade*/
+
 
 @media(min-width: 1921px) and (max-width: 2560px){
-    .first img{
-        width: 80%;
+    .primeira-parte img{
+        width: 50%;
         position: relative;
-        bottom: -388px;
-        margin-left: 13vw;
+        bottom: -465px;
+        margin-left: 10%;
     }
+
+    .primeira-parte p{
+        text-align: center;
+        display: flex;
+        justify-content: end;
+        color: white;
+        position: relative;
+        bottom: 500px;
+        margin-right: 20%;
+        font-size: 33px;
+    }
+    
+    .primeira-parte button{
+        width: 250px;
+        height: 80px;
+        color: white;
+        background-color: #6e0c1b;
+        position: absolute;
+        bottom: 988px;
+        left: 57%;
+        border: none;
+        cursor: pointer;
+        font-size: 25px;
+    }
+
+    .itens{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-left: 1%;
+    }
+    
+    .item{
+        transition: .35s;
+        cursor: pointer;
+        width: 18vw;
+        height: 10vh;
+        margin-left: 2%;
+    }
+
+    .final{
+        height: 31vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    
+
+    
+    
+    
 }
 
 @media(max-width: 1440px){
-    .first img{
-        width: 80%;
+    header{
+        width: 100%;
+        height: 9vh;
+        background-color: #8c0022;
+    }
+    
+    header img{
+        width: 20%;
+    }
+    .primeira-parte img{
+        width: 50%;
         position: relative;
-        bottom: -218px;
-        margin-left: 13vw;
+        bottom: -675px;
+        margin-left: 10%;
+    }
+
+    .primeira-parte p{
+        text-align: center;
+        display: flex;
+        justify-content: end;
+        color: white;
+        position: relative;
+        bottom: 300px;
+        margin-right: 20%;
+        font-size: 33px;
+    }
+    
+    .primeira-parte button{
+        width: 250px;
+        height: 80px;
+        color: white;
+        background-color: #6e0c1b;
+        position: absolute;
+        bottom: 988px;
+        left: 40%;
+        border: none;
+        cursor: pointer;
+        font-size: 25px;
+    }
+    .itens{
+        width: 25%;
+        gap: 35px;
+        margin-right: 8%;
     }
 }
 
 @media(max-width: 1024px){
-    .first img{
-        width: 80%;
-        position: relative;
-        bottom: -244px;
-        margin-left: 13vw;
+    header{
+        width: 100%;
+        height: 9vh;
+        background-color: #8c0022;
+    }
+    
+    header img{
+        width: 20%;
+    }
+    .primeira-parte{
+        height: 91vh;
     }
 
-    aside{
-        display: flex;
-       align-items: center;
-       flex-direction: column;
-       margin-top: 1%;
+    .primeira-parte img{
+        width: 80%;
+        position: relative;
+        bottom: -755px;
+        margin-left: 10%;
     }
+
+    .primeira-parte p{
+        text-align: center;
+        display: flex;
+        justify-content: end;
+        color: white;
+        position: relative;
+        bottom: 100px;
+        margin-right: 5%;
+        font-size: 33px;
+    }
+    
+    .primeira-parte button{
+        width: 250px;
+        height: 80px;
+        color: white;
+        background-color: #6e0c1b;
+        position: absolute;
+        bottom: 750px;
+        left: 39%;
+        border: none;
+        cursor: pointer;
+        font-size: 25px;
+    }
+
+    .final{
+        display: none;
+    }
+
 }
 
 @media(max-width: 768px){
-    .first img{
+    header{
+        width: 100%;
+        height: 9vh;
+        background-color: #8c0022;
+    }
+    
+    header img{
+        width: 20%;
+    }
+    .primeira-parte img{
         width: 80%;
         position: relative;
-        bottom: -268px;
-        margin-left: 13vw;
+        bottom: -800px;
+        margin-left: 10%;
     }
 
-    aside{
+    .primeira-parte p{
+        text-align: center;
         display: flex;
-       align-items: center;
-       flex-direction: column;
-       margin-top: 1%;
-    }
-
-    .first p{
+        justify-content: end;
         color: white;
-        text-align: center;
-        margin-right: 20%;
-        font-size: 18px;
+        position: relative;
+        bottom: 100px;
+        margin-right: 1%;
+        font-size: 33px;
     }
-
-    .first aside button{
+    
+    .primeira-parte button{
+        width: 250px;
+        height: 80px;
+        color: white;
         background-color: #6e0c1b;
+        position: absolute;
+        bottom: 788px;
+        left: 34%;
         border: none;
-        text-align: center;
-        margin-top: 3%;
-        margin-right: 20%;
-        width: 40%;
-        height: 6vh;
-        color: white;
-        font-size: 15px;
-        border-radius: 3px;
         cursor: pointer;
+        font-size: 25px;
+    }
+
+    .final{
+       display: none;
+    }
+    
+    .itens{
+        display: none;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+    }
+    
+    .item{
+        transition: .35s;
+        cursor: pointer;
+        width: 25vw;
+        height: 26vh;
     }
 }
 
 @media(max-width: 425px){
-    *{
-        overflow: hidden;
+    header{
+        width: 100%;
+        height: 9vh;
+        background-color: #8c0022;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
-    .first img{
+    
+    header img{
+        width: 40%;
+    }
+    .primeira-parte img{
         width: 80%;
         position: relative;
-        bottom: -120px;
-        margin-left: 10vw;
+        bottom: -970px;
+        margin-left: 8%;
     }
 
-    aside{
-        display: flex;
-       align-items: center;
-       flex-direction: column;
-       margin-top: 1%;
-    }
-
-    .first p{
-        color: white;
+    .primeira-parte p{
         text-align: center;
-        margin-right: 20px;
-        font-size: 15px;
+        display: flex;
+        justify-content: end;
+        color: white;
+        position: relative;
+        bottom: 50px;
+        margin-right: 1%;
+        font-size: 33px;
     }
-
-    .first aside button{
+    
+    .primeira-parte button{
+        width: 250px;
+        height: 80px;
+        color: white;
         background-color: #6e0c1b;
+        position: absolute;
+        bottom: 688px;
+        left: 20%;
         border: none;
-        text-align: center;
-        margin-top: 3%;
-        margin-right: 20px;
-        width: 60%;
-        height: 6vh;
-        color: white;
-        font-size: 12px;
-        border-radius: 3px;
         cursor: pointer;
-    }
-
-    .second{
-        width: 100%;
-        height: 40vh;
-        display: flex;
-        justify-content: flex-start;
-        align-items: flex-start;
-    }
-
-    .second .sferrari{
-       display: none;
-    }
-
-    .second .my-slider{
-        margin-top: 50%;
-        margin-left: -40px;
+        font-size: 25px;
     }
 }
 
+@media(max-width: 375px){
+    header{
+        width: 100%;
+        height: 9vh;
+        background-color: #8c0022;
+    }
+    
+    header img{
+        width: 40%;
+    }
+    .primeira-parte img{
+        width: 80%;
+        position: relative;
+        bottom: -875px;
+        margin-left: 10%;
+    }
 
+    .primeira-parte p{
+        text-align: center;
+        display: flex;
+        justify-content: end;
+        color: white;
+        position: relative;
+        bottom: 50px;
+        margin-right: 1%;
+        font-size: 33px;
+    }
+    
+    .primeira-parte button{
+        width: 250px;
+        height: 80px;
+        color: white;
+        background-color: #6e0c1b;
+        position: absolute;
+        bottom: 788px;
+        left: 20%;
+        border: none;
+        cursor: pointer;
+        font-size: 25px;
+    }
+}
 
+@media(max-width: 320px){
+    header{
+        width: 100%;
+        height: 9vh;
+        background-color: #8c0022;
+    }
+    
+    header img{
+        width: 40%;
+    }
+    .primeira-parte img{
+        width: 80%;
+        position: relative;
+        bottom: -880px;
+        margin-left: 10%;
+    }
+
+    .primeira-parte p{
+        text-align: center;
+        display: flex;
+        justify-content: end;
+        color: white;
+        position: relative;
+        bottom: 50px;
+        margin-right: 1%;
+        font-size: 33px;
+    }
+    
+    .primeira-parte button{
+        width: 250px;
+        height: 80px;
+        color: white;
+        background-color: #6e0c1b;
+        position: absolute;
+        bottom: 688px;
+        left: 10%;
+        border: none;
+        cursor: pointer;
+        font-size: 25px;
+    }
+}
