--- a/styles/styles.css
+++ b/styles/styles.css
@@ -25,7 +25,7 @@ header img{
 .primeira-parte img{
     width: 50%;
     position: relative;
-    bottom: -192px;
+    bottom: -193px;
     margin-left: 15%;
 }
 
@@ -64,6 +64,7 @@ header img{
     display: flex;
     align-items: center;
     justify-content: center;
+    background-color: #6e0c1b;
 }
 
 .itens{
@@ -78,6 +79,11 @@ header img{
     cursor: pointer;
     width: 15vw;
     height: 20vh;
+}
+
+.item img{
+    width: 100%;
+    height: 100%;
 }
 
 .itens:hover > :not(:hover){
@@ -130,12 +136,17 @@ header img{
         justify-content: center;
         margin-left: 1%;
     }
+
+    .itens img{
+        width: 100%;
+        height: 100%;
+    }
     
     .item{
         transition: .35s;
         cursor: pointer;
-        width: 18vw;
-        height: 10vh;
+        width: 15vw;
+        height: 20vh;
         margin-left: 2%;
     }
 
@@ -152,6 +163,45 @@ header img{
     
 }
 
+@media(max-width: 1680px){
+    .primeira-parte img{
+        width: 50%;
+        position: relative;
+        bottom: -245px;
+        margin-left: 10%;
+    }
+    
+
+    .primeira-parte p{
+        text-align: center;
+        display: flex;
+        justify-content: end;
+        color: white;
+        position: relative;
+        bottom: 480px;
+        margin-right: 20%;
+        font-size: 33px;
+    }
+    
+    .primeira-parte button{
+        width: 250px;
+        height: 80px;
+        color: white;
+        background-color: #6e0c1b;
+        position: absolute;
+        bottom: 588px;
+        left: 47%;
+        border: none;
+        cursor: pointer;
+        font-size: 25px;
+    }
+
+    
+
+}
+
+
+
 @media(max-width: 1440px){
     header{
         width: 100%;
@@ -165,7 +215,7 @@ header img{
     .primeira-parte img{
         width: 50%;
         position: relative;
-        bottom: -195px;
+        bottom: -205px;
         margin-left: 10%;
     }
 
@@ -186,18 +236,36 @@ header img{
         color: white;
         background-color: #6e0c1b;
         position: absolute;
-        bottom: 400px;
-        left: 40%;
+        bottom: 440px;
+        left: 42%;
         border: none;
         cursor: pointer;
         font-size: 25px;
     }
+
     .itens{
-        width: 25%;
-        gap: 35px;
-        margin-right: 8%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-left: 1%;
     }
+    
+    .item{
+        transition: .35s;
+        cursor: pointer;
+        width: 15vw;
+        height: 20vh;
+    }
+    
+    .item img{
+        width: 100%;
+        height: 100%;
+    }
+
+
 }
+
+
 
 @media(max-width: 1024px){
     header{
@@ -226,7 +294,7 @@ header img{
         justify-content: end;
         color: white;
         position: relative;
-        bottom: 100px;
+        bottom: 200px;
         margin-right: 5%;
         font-size: 33px;
     }
@@ -237,8 +305,8 @@ header img{
         color: white;
         background-color: #6e0c1b;
         position: absolute;
-        bottom: 250px;
-        left: 39%;
+        bottom: 320px;
+        left: 40%;
         border: none;
         cursor: pointer;
         font-size: 25px;
@@ -261,7 +329,7 @@ header img{
         width: 20%;
     }
     .primeira-parte img{
-        width: 50%;
+        width: 40%;
         position: relative;
         bottom: -400px;
         margin-left: 10%;
@@ -273,7 +341,7 @@ header img{
         justify-content: end;
         color: white;
         position: relative;
-        bottom: 100px;
+        bottom: 150px;
         margin-right: 1%;
         font-size: 33px;
     }
@@ -422,7 +490,7 @@ header img{
         position: relative;
         bottom: 50px;
         margin-right: 1%;
-        font-size: 33px;
+        font-size: 20px;
     }
     
     .primeira-parte button{
